[gd_scene load_steps=7 format=3 uid="uid://bd3dh78rgvc5y"]

[ext_resource type="Script" path="res://you_win.gd" id="1_1piuq"]
[ext_resource type="PackedScene" uid="uid://hbrjciajmnpf" path="res://scrolling_background.tscn" id="2_daxe7"]
[ext_resource type="Texture2D" uid="uid://bwm31tuymnoxs" path="res://assets/sprites/background_win.png" id="3_w121e"]
[ext_resource type="PackedScene" uid="uid://dcxjxqadvhk87" path="res://level_label.tscn" id="4_lhu34"]
[ext_resource type="PackedScene" uid="uid://c6tacpe7tp1de" path="res://animated_button.tscn" id="5_rwuot"]
[ext_resource type="PackedScene" uid="uid://dftsvelpx2cta" path="res://fade_transition.tscn" id="6_a0ny3"]

[node name="YouWin" type="CanvasLayer"]
script = ExtResource("1_1piuq")

[node name="CatchAllClick" type="TextureButton" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollingBackground" parent="." instance=ExtResource("2_daxe7")]
mouse_filter = 2
texture = ExtResource("3_w121e")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="LevelLabel" parent="MarginContainer" instance=ExtResource("4_lhu34")]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.160784, 0.00392157, 0.262745, 1)
theme_override_colors/font_outline_color = Color(1, 0.956863, 0.721569, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 40
text = "YOU WIN!"
horizontal_alignment = 1

[node name="NextLevelButton" parent="MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource("5_rwuot")]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
text = "Next level"

[node name="FadeTransition" parent="." instance=ExtResource("6_a0ny3")]
unique_name_in_owner = true
visible = false
